- 
    Bug 
- 
    Resolution: Done
- 
    P3: Somewhat important 
- 
    5.3.0
- 
    None
- 
    Windows 7 x64
- 
        a71e285133087714034f3c84a758980c85b3801e (5.3. branch, 18.7.2014, 5.3.2)
My bug is probably very similar to this one:
https://bugreports.qt-project.org/browse/QTBUG-30181
But I would like to point out why this issue is more serious than it seems and give a bit clearer example perhaps.
The problem description - if I create an instance of QDialog which has some layout and some substantial minimal size and also which parent is QWidget that somehow obtained winid then dialog positioning is messed up.
At first I though that obtaining winId is a merely question of winId() method usage but when I removed all of it's usages the issue still persisted because widget in question (which serves as parent to dialog) also contains QGLWidget which enforces winid creation for all of it's parents on windows and this actually leads to the very same effect.
I think this issue is important because it's origin is very unclear to me and I see no valid workarounds.
Steps to reproduce:
- Show dialog parented on native widget
- Actual: dialog appears at 0,0 (content position)
- Expected: dialog is centered on top level
- relates to
- 
                    QTBUG-30181 Calling winId() into my promoted QWidget's constructor (and not just in there), causes a lot weird problems in a QMainWindow. -         
- Open
 
-         
- resulted in
- 
                    QTBUG-41898 [REG: 5.3.1 -> 5.3.2] QGLWidget and QMenu in dock causes transient parent to not be set -         
- Closed
 
-         
- 
                    QTBUG-42464 opening a context menu over a QGLWidget causes a warning in setTransientParent -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-40195 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 89777,3 | Ensure transient parents are top level widgets. | 5.3 | qt/qtbase | Status: MERGED | +2 | 0 |