Ensure transient parents are top level widgets.

When a dialog was parented on a native child widget,
its window handle was used as a transient parent.
This confused QPlatformWindow::initialGeometry() among
other things. Use top level window as is in Qt 4.

Task-number: QTBUG-40195
Change-Id: Ic82adc276175f92adde825fb2551274351e41f30
Reviewed-by: Jørgen Lind <jorgen.lind@digia.com>

cregit: a71e285133087714034f3c84a758980c85b3801e https://github.com/qt/qtbase/commit/a71e285133087714034f3c84a758980c85b3801e